# TiuQA_Bot

./: .dockerignore  .env.dist  LICENSE  Makefile  README.md  docker-compose.example.yml  pyproject.toml
app/: __main__.py  const.py
app/factory/: __init__.py  app_config.py  services.py
app/factory/telegram/: bot.py  dispatcher.py
app/models/: base.py
app/models/config/env/: __init__.py  app.py  langchain.py  telegram.py
app/models/dto/: qa.py
app/runners/: app.py  polling.py
app/services/: qa.py
app/telegram/handlers/extra/: __init__.py  errors.py  lifespan.py
app/telegram/handlers/main/: menu.py
app/telegram/helpers/: messages.py
app/telegram/middlewares/: __init__.py  chat_action.py
app/utils/: custom_types.py
app/utils/logging/: __init__.py
assets/: tiu_data.json
scripts/: build_vectorstore.py
tiu_vectorstore/: chroma.sqlite3
